Setting up folder structure for a bazel docker image